# Musopti

./: .gitignore  AGENTS.md  README.md
apps/desktop/: index.html
apps/ios/: Package.swift  project.yml
apps/ios/Musopti.xcodeproj/: project.pbxproj
apps/ios/Musopti/App/: AppPreferences.swift  AppRouter.swift  ContentView.swift  MusoptiApp.swift
apps/ios/Musopti/BLE/: BLEConstants.swift  BLEManager.swift  BLESyncEvaluator.swift  DeviceStatus.swift  MusoptiConfig.swift  MusoptiEvent.swift  MusoptiStatus.swift  RawDataParser.swift
apps/ios/Musopti/Models/: DetectionProfile.swift  Exercise.swift  ExerciseCategory.swift  ExerciseLog.swift  IMURecording.swift  SetLog.swift  WorkoutSession.swift  WorkoutTemplate.swift
apps/ios/Musopti/Resources/: exercises.json
apps/ios/Musopti/Services/: ExerciseCatalog.swift  RecordingManager.swift  SessionFeedbackCoordinator.swift  SessionManager.swift  StatsEngine.swift
apps/ios/Musopti/Utilities/: DataParsing.swift  Extensions.swift  MotionPhase.swift  WorkoutMetrics.swift
apps/ios/Musopti/Views/Connection/: ConnectionView.swift
apps/ios/Musopti/Views/History/: ComparisonView.swift  HistoryView.swift  SessionDetailView.swift  (+1 more)
apps/ios/MusoptiAppTests/: BLESyncEvaluatorTests.swift  RecordingPreflightTests.swift  SessionManagerTests.swift
apps/ios/MusoptiTests/: MusoptiTests.swift
docs/plans/: 2026-03-03-musopti-foundations-design.md  2026-03-04-musopti-ios-app.md
docs/spec/: musopti-spec.tex
docs/validation/: system-validation.md
embedded/firmware/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
embedded/firmware/components/audio_feedback/: CMakeLists.txt  Kconfig  audio_feedback.c  audio_feedback.h
embedded/firmware/components/ble_service/: CMakeLists.txt  ble_service.c  ble_service.h
embedded/firmware/components/common/: CMakeLists.txt  ble_config_validation.c  ble_config_validation.h  i2c_bus.c  i2c_bus.h  musopti_types.c  musopti_types.h
embedded/firmware/components/display/: CMakeLists.txt  Kconfig  display.c  display.h
embedded/firmware/components/imu/: CMakeLists.txt  Kconfig  imu.c  imu.h
embedded/firmware/components/motion_detection/: CMakeLists.txt  motion_detection.c  motion_detection.h
embedded/firmware/components/power_mgmt/: CMakeLists.txt  power_mgmt.c  power_mgmt.h
embedded/firmware/components/qmi8658/: CMakeLists.txt  qmi8658.c
embedded/firmware/components/recorder/: CMakeLists.txt  recorder.c  recorder.h
embedded/firmware/host-tests/: CMakeLists.txt
embedded/firmware/host-tests/fixtures/: bench_valid_hold.csv  bench_valid_hold.expected  generic_single_rep.csv  generic_single_rep.expected
embedded/firmware/host-tests/include/: esp_err.h
embedded/firmware/host-tests/tests/: config_validation_test.c  motion_replay_test.c
embedded/firmware/main/: CMakeLists.txt  idf_component.yml  main.c
(+22 files in other folders)
